libguile/vm-i-scheme.c
@@ -388,8 +388,12 @@ VM_DEFINE_FUNCTION (159, ash, "ash", 2)
   if (SCM_I_INUMP (x) && SCM_I_INUMP (y))
     {
       if (SCM_I_INUM (y) < 0)
-        /* Right shift, will be a fixnum. */
-        RETURN (SCM_I_MAKINUM (SCM_I_INUM (x) >> -SCM_I_INUM (y)));
+        {
+          /* Right shift, will be a fixnum. */
+          if (SCM_I_INUM (y) > -SCM_I_FIXNUM_BIT)
+            RETURN (SCM_I_MAKINUM (SCM_I_INUM (x) >> -SCM_I_INUM (y)));
+          /* fall through */
+        }
       else
         /* Left shift. See comments in scm_ash. */
         {
